--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,7 @@
   "authors": [
     {
       "name": "Lee Saferite",
-      "email": "lee.saferite@aoe.com",
+      "email": "lee@saferite.com",
       "role": "Author/Maintainer"
     },
     {
